add the calculator container

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>classTask005</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="calculator">
+            <input type="date" id="birthdate" placeholder="Select your birthdate">
+            <button onclick="calculateAge()">Calculate</button>
+        </div>
+
+    <script src="./script.js"></script>
     
 </body>
 </html>
