add the year section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             <input type="date" id="birthdate" placeholder="Select your birthdate">
             <button onclick="calculateAge()">Calculate</button>
         </div>
+        <div class="results">
+            <div class="box">
+                <h1 id="years">0</h1>
+                <p>Years</p>
+            </div>
 
     <script src="./script.js"></script>
     
