--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
                 <h1 id="years">0</h1>
                 <p>Years</p>
             </div>
+            <div class="box"></div>
+                <h1 id="months">0</h1>
+                <p>Months</p>
+            </div>
+            <div class="box">
+                <h1 id="days">0</h1>
+                <p>Days</p>
+            </div>
+        </div>
+    </div>
 
     <script src="./script.js"></script>
     
