add class=result,box,h1 and p

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>classTask005</title>
     <link rel="stylesheet" href="./style.css">
+    <title>Age Calculator</title>
 </head>
 <body>
     <div class="container">
@@ -12,12 +12,13 @@
             <input type="date" id="birthdate" placeholder="Select your birthdate">
             <button onclick="calculateAge()">Calculate</button>
         </div>
+
         <div class="results">
             <div class="box">
                 <h1 id="years">0</h1>
                 <p>Years</p>
             </div>
-            <div class="box"></div>
+            <div class="box">
                 <h1 id="months">0</h1>
                 <p>Months</p>
             </div>
