--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="calculator">
             <input type="date" id="birthdate" placeholder="Select your birthdate">
-            <button onclick="calculateAge()">Calculate</button>
+            <button onclick="calAge()">Calculate</button>
         </div>
 
         <div class="results">
